# autopatch

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  main.py  pyproject.toml
autopatch/agent/: autopatch_agent.py
autopatch/tools/: bigquery_tools.py  fivetran_tools.py  gitlab_tools.py
autopatch/utils/: phoenix_tracer.py  secrets.py
