[project]
name = "autopatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix-client>=2.7.0",
    "fastapi>=0.136.3",
    "google-adk>=2.2.0",
    "google-cloud-aiplatform>=1.156.0",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-secret-manager>=2.29.0",
    "openinference-instrumentation-google-adk>=0.1.15",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-sdk>=1.41.1",
    "python-gitlab>=8.4.0",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
